Fix doc styling bug where underscores are invisible in some highlighted code.
On Windows or Linux (but not Mac), if you view the doc page at:

http://code.google.com/chrome/extensions/browserAction.html

You'll notice that in the manifest section, the highlighted code has
underscores missing for "browser_action", "default_icon", "default_title",
etc. If you increase/decrease the font size using CTL + or CTL -, the
underscores become visible.

This CL fixes that.

BUG=none
TEST=Should see underscores in highlighted code in extensions doc pre sections
on Win/Linux.


Review URL: http://codereview.chromium.org/521042

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@35668 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: d6c80017c464bd863c5674d68462ee4691252d5c

--- a/chrome/common/extensions/docs/css/ApiRefStyles.css
+++ b/chrome/common/extensions/docs/css/ApiRefStyles.css
@@ -88,7 +88,6 @@ pre {
   font-size:9pt;
   background-color:#fafafa;
   border:1px solid #bbb;
-  line-height:125%;
   margin:1em 0 0 0;
   padding:.99em;
   overflow:auto;
